methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: Unmatched closing brace '}' ignored here
}
^