methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   avance; if (getColor ==Color.green) { recule ;return true;}
  else {recule ; return False}}
    // Write your code here
}